; ModuleID = '/home/carl/AnghaBench/RetroArch/runahead/extr_mem_util.c_strcat_alloc.c'
source_filename = "/home/carl/AnghaBench/RetroArch/runahead/extr_mem_util.c_strcat_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @strcat_alloc(i8** %0, i8* %1) #0 {
  %3 = alloca i8**, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  store i8** %0, i8*** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8**, i8*** %3, align 8
  %8 = load i8*, i8** %7, align 8
  store i8* %8, i8** %6, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %16, label %11

11:                                               ; preds = %2
  %12 = load i8*, i8** %4, align 8
  %13 = call i8* @strcpy_alloc_force(i8* %12)
  store i8* %13, i8** %6, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = load i8**, i8*** %3, align 8
  store i8* %14, i8** %15, align 8
  br label %42

16:                                               ; preds = %2
  %17 = load i8*, i8** %4, align 8
  %18 = icmp ne i8* %17, null
  br i1 %18, label %20, label %19

19:                                               ; preds = %16
  br label %42

20:                                               ; preds = %16
  %21 = load i8*, i8** %6, align 8
  %22 = call i64 @strlen(i8* %21)
  store i64 %22, i64* %5, align 8
  %23 = load i8*, i8** %6, align 8
  %24 = load i64, i64* %5, align 8
  %25 = load i8*, i8** %4, align 8
  %26 = call i64 @strlen(i8* %25)
  %27 = add i64 %24, %26
  %28 = add i64 %27, 1
  %29 = call i64 @realloc(i8* %23, i64 %28)
  %30 = inttoptr i64 %29 to i8*
  store i8* %30, i8** %6, align 8
  %31 = load i8*, i8** %6, align 8
  %32 = icmp ne i8* %31, null
  br i1 %32, label %34, label %33

33:                                               ; preds = %20
  br label %42

34:                                               ; preds = %20
  %35 = load i8*, i8** %6, align 8
  %36 = load i8**, i8*** %3, align 8
  store i8* %35, i8** %36, align 8
  %37 = load i8*, i8** %6, align 8
  %38 = load i64, i64* %5, align 8
  %39 = getelementptr inbounds i8, i8* %37, i64 %38
  %40 = load i8*, i8** %4, align 8
  %41 = call i32 @strcpy(i8* %39, i8* %40)
  br label %42

42:                                               ; preds = %34, %33, %19, %11
  ret void
}

declare dso_local i8* @strcpy_alloc_force(i8*) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i64 @realloc(i8*, i64) #1

declare dso_local i32 @strcpy(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
